<resources>
    <string name="app_name">TaskManager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_name">Project name</string>
    <string name="create_new_project">Create new project</string>
    <string name="todo">TODO</string>

    <string name="title_activity_detailed_meeting">DetailedMeetingActivity</string>
    <string name="meeting_name">Meeting name</string>
    <string name="meeting_date">Meeting date</string>
    <string name="meeting_description">Meeting description</string>
    <string name="meeting_agenda">Meeting agenda</string>
    <string name="meeting_location">Meeting location</string>
    <string name="note_item_content">Content</string>
    <string name="note_item_author">Author</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>

    <string-array name="task_priorities">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>

    </string-array>
    <string-array name="roles">
        <item>Developer</item>
        <item>Tester</item>
        <item>Project Manager</item>

    </string-array>


</resources>
