<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailed_meeting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_name" />

    <TextView
        android:id="@+id/detailed_meeting_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_date" />

    <TextView
        android:id="@+id/detailed_meeting_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_description" />

    <TextView
        android:id="@+id/detailed_meeting_agenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_agenda" />

    <TextView
        android:id="@+id/detailed_meeting_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_location" />
</LinearLayout>