<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProjectActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_project"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:id="@+id/new_project_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_event_note_black_24dp"
            android:contentDescription="@string/todo" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            app:boxBackgroundColor="@color/thumbColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="@string/project_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/project_name"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="20dp"
                android:maxLines="1"
                android:singleLine="true"


                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/some_random_textview"
        android:textSize="20dp"
        android:text="helo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Collaborators:"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <!--<ImageView-->
                        <!--android:layout_width="40dp"-->
                        <!--android:layout_height="40dp"-->
                        <!--android:layout_marginTop="15dp"-->
                        <!--android:layout_marginRight="15dp"-->
                        <!--android:src="@drawable/ic_event_note_black_24dp" />-->
                    <Spinner
                        android:id="@+id/role_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </Spinner>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Collaborator email"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:inputType="text"
                            android:id="@+id/collab_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--&gt;-->
                    <!--<ImageView-->
                        <!--android:layout_marginRight="15dp"-->

                        <!--android:layout_marginTop="15dp"-->
                        <!--android:layout_width="40dp"-->
                        <!--android:layout_height="40dp"-->
                        <!--android:src="@drawable/ic_event_note_black_24dp" />-->
                    <!--<com.google.android.material.textfield.TextInputLayout-->
                        <!--style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:hint="Role"-->

                        <!--&gt;-->
                        <!--<com.google.android.material.textfield.TextInputEditText-->
                            <!--android:inputType="text"-->
                            <!--android:id="@+id/reg_user_address"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content" />-->
                    <!--</com.google.android.material.textfield.TextInputLayout>-->

                <!--</LinearLayout>-->

            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_new_collaborator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_add_white_24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/collaborators_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/create_project_button"
        android:layout_width="match_parent"
        android:layout_margin="10dp"

        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="CREATE PROJECT"
        android:textSize="20dp" />







</LinearLayout>
